# financial-risk-intelligence

./: app.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  sitecustomize.py
.streamlit/: config.toml
config/: config.yaml
dashboard/: app.py
dashboard/components/: market_overview.py  regime_timeline.py  report_interface.py
data_pipeline/: Validation.py  __init__.py  ingestion.py  preprocessing.py
feature_engineering/: feature_store.py  market_features.py  sentiment_features.py
llm_reports/: prompt_template.py  report_generator.py  report_storage.py
models/: evaluation.py  regime_model.py  sentiment_model.py  volatility_model.py
monitoring/: drift_detection.py  logging_utils.py
risk_engine/: backtesting.py  risk_calculator.py
scripts/: generate_report.py
tests/: test_features.py  test_risk_engine.py  test_validation.py
